Update SystemUtil.java